--- a/ticonet/Views/home/Index.cshtml
+++ b/ticonet/Views/home/Index.cshtml
@@ -164,25 +164,25 @@
                 <span>:</span>
                 <input type="number" id="tbAttachMinutes" style="width: 40px;" name="Minutes" />*@
                 <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
-                    <input type="checkbox"/>mon
+                    <input type="checkbox" name="Mon"/>mon
                 </div>
                 <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
-                    <input type="checkbox" />tue
+                    <input type="checkbox" name="Tue" />tue
                 </div>
                 <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
-                    <input type="checkbox" />wed
+                    <input type="checkbox" name="Wed" />wed
                 </div>
                 <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
-                    <input type="checkbox" />thu
+                    <input type="checkbox" name="Thu"/>thu
                 </div>
                 <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
-                    <input type="checkbox" />fri
+                    <input type="checkbox" name="Fri"/>fri
                 </div>
                 <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
-                    <input type="checkbox" />sat
+                    <input type="checkbox" name="Sat" />sat
                 </div>
                 <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
-                    <input type="checkbox" />sun
+                    <input type="checkbox" name="Sun" />sun
                 </div>
             </div>
         </div>
