--- a/ticonet/Content/Map.css
+++ b/ticonet/Content/Map.css
@@ -264,3 +264,6 @@
         .line-table-menu a:hover {
             color: #fff;
         }
+        .has-error {
+            border-bottom-color: red !important;
+        }
