--- a/ticonet/Views/MessageModule/Index.cshtml
+++ b/ticonet/Views/MessageModule/Index.cshtml
@@ -38,7 +38,7 @@
     <link href="~/Content/MessageModule_PrototypeStyles.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,300i,400,400i,700" rel="stylesheet">
 </head>
-<body dir="rtl">
+<body>
 
     <div class="main-container" ng-app="App" ng-cloak>
 
