--- a/ticonet/Views/MessageModule/_ngReports.cshtml
+++ b/ticonet/Views/MessageModule/_ngReports.cshtml
@@ -82,7 +82,7 @@
                     <div class="col-xs-2">
                         {{batch.MessagesCount}}
                     </div>
-                    <div class="col-xs-2">
+                    <div class="col-xs-2 max-height-limited">
                         {{batch.Errors}}
                     </div>
                 </div>
