--- a/ticonet/Views/MessageModule/_ngTemplates.cshtml
+++ b/ticonet/Views/MessageModule/_ngTemplates.cshtml
@@ -58,8 +58,8 @@
             <!--Type (sms or email) -->
             <div>
                 <span class="txt-c-grmore clickable" ng-click="va.curtemplate.IsSms=!va.curtemplate.IsSms">
-                    <i ng-class="va.curtemplate.IsSms ? 'glyphicon-check txt-c-gr' : 'glyphicon-unchecked'" class="glyphicon iconclick"></i> @DEBS.Translate("MessageModule.sms")
-                    <i ng-class="!va.curtemplate.IsSms ? 'glyphicon-check txt-c-gr' : 'glyphicon-unchecked'" class="glyphicon iconclick"></i> @DEBS.Translate("MessageModule.mail")
+                    <i ng-class="va.curtemplate.IsSms ? 'glyphicon-check txt-c-gr' : 'glyphicon-unchecked'" class="glyphicon iconclick">@DEBS.Translate("MessageModule.sms")</i> 
+                    <i ng-class="!va.curtemplate.IsSms ? 'glyphicon-check txt-c-gr' : 'glyphicon-unchecked'" class="glyphicon iconclick">@DEBS.Translate("MessageModule.mail")</i> 
                 </span>
             </div>
 
