--- a/ticonet/Views/MessageModule/Index.cshtml
+++ b/ticonet/Views/MessageModule/Index.cshtml
@@ -27,7 +27,7 @@
 </style>
 
 <!DOCTYPE html>
-<html @*class="hebrew-style"*@>
+<html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +40,7 @@
 </head>
 <body>
 
-    <div class="main-container" ng-app="App" ng-cloak>
+    <div class="main-container hebrew-style" ng-app="App" ng-cloak>
 
         <!--HoveringNotifications Controller-->
         <div ng-controller="NotificationController" data-ng-init="init()">
